micro_speech/build/log/idf_py_stdout_output_28289
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/dome/esp/speech_test/micro_speech/build/bootloader/esp-idf/esptool_py && /Users/dome/.espressif/python_env/idf5.0_py3.12_env/bin/python /Users/dome/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/dome/esp/speech_test/micro_speech/build/bootloader/bootloader.bin
Bootloader binary size 0x5030 bytes. 0x2fd0 bytes (37%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj 
/Users/dome/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-g++ -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -I/Users/dome/esp/speech_test/micro_speech/build/config -I/Users/dome/esp/speech_test/micro_speech/main -I/Users/dome/esp/esp-idf/components/newlib/platform_include -I/Users/dome/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/dome/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/dome/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/dome/esp/esp-idf/components/freertos/esp_additions/include -I/Users/dome/esp/esp-idf/components/esp_hw_support/include -I/Users/dome/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/dome/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/dome/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/dome/esp/esp-idf/components/heap/include -I/Users/dome/esp/esp-idf/components/log/include -I/Users/dome/esp/esp-idf/components/soc/include -I/Users/dome/esp/esp-idf/components/soc/esp32s3/. -I/Users/dome/esp/esp-idf/components/soc/esp32s3/include -I/Users/dome/esp/esp-idf/components/hal/esp32s3/include -I/Users/dome/esp/esp-idf/components/hal/include -I/Users/dome/esp/esp-idf/components/hal/platform_port/include -I/Users/dome/esp/esp-idf/components/esp_rom/include -I/Users/dome/esp/esp-idf/components/esp_rom/include/esp32s3 -I/Users/dome/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/dome/esp/esp-idf/components/esp_common/include -I/Users/dome/esp/esp-idf/components/esp_system/include -I/Users/dome/esp/esp-idf/components/esp_system/port/soc -I/Users/dome/esp/esp-idf/components/esp_system/port/include/private -I/Users/dome/esp/esp-idf/components/xtensa/include -I/Users/dome/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/dome/esp/esp-idf/components/lwip/include -I/Users/dome/esp/esp-idf/components/lwip/include/apps -I/Users/dome/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/dome/esp/esp-idf/components/lwip/lwip/src/include -I/Users/dome/esp/esp-idf/components/lwip/port/esp32/include -I/Users/dome/esp/esp-idf/components/lwip/port/esp32/include/arch -I/Users/dome/esp/esp-idf/components/spi_flash/include -I/Users/dome/esp/esp-idf/components/driver/include -I/Users/dome/esp/esp-idf/components/driver/deprecated -I/Users/dome/esp/esp-idf/components/driver/esp32s3/include -I/Users/dome/esp/esp-idf/components/esp_pm/include -I/Users/dome/esp/esp-idf/components/esp_ringbuf/include -I/Users/dome/esp/esp-idf/components/esp_timer/include -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp-tflite-micro -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp-tflite-micro/third_party/gemmlowp -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp-tflite-micro/third_party/flatbuffers/include -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp-tflite-micro/third_party/ruy -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp-tflite-micro/third_party/kissfft -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp-tflite-micro/signal/micro/kernels -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp-tflite-micro/signal/src -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp-tflite-micro/signal/src/kiss_fft_wrappers -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp32_s3_eye/include -I/Users/dome/esp/esp-idf/components/spiffs/include -I/Users/dome/esp/esp-idf/components/esp_partition/include -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__button/include -I/Users/dome/esp/esp-idf/components/esp_adc/include -I/Users/dome/esp/esp-idf/components/esp_adc/interface -I/Users/dome/esp/esp-idf/components/esp_adc/esp32s3/include -I/Users/dome/esp/esp-idf/components/esp_adc/deprecated/include -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp32-camera/driver/include -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp32-camera/conversions/include -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp_codec_dev/include -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp_codec_dev/interface -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp_codec_dev/device/include -I/Users/dome/esp/speech_test/micro_speech/managed_components/espressif__esp_lvgl_port/include -I/Users/dome/esp/esp-idf/components/esp_lcd/include -I/Users/dome/esp/esp-idf/components/esp_lcd/interface -I/Users/dome/esp/speech_test/micro_speech/managed_components/lvgl__lvgl -I/Users/dome/esp/speech_test/micro_speech/managed_components/lvgl__lvgl/src -I/Users/dome/esp/speech_test/micro_speech/managed_components -I/Users/dome/esp/speech_test/micro_speech/managed_components/lvgl__lvgl/examples -I/Users/dome/esp/speech_test/micro_speech/managed_components/lvgl__lvgl/demos -mlongcalls  -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/dome/esp/speech_test/micro_speech=. -fmacro-prefix-map=/Users/dome/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu++20 -fno-exceptions -fno-rtti -D_GNU_SOURCE -DIDF_VER=\"v5.0.6\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-maybe-uninitialized -Wno-missing-field-initializers -Wno-error=sign-compare -Wno-error=double-promotion -Wno-type-limits -DTF_LITE_STATIC_MEMORY -DBUTTON_VER_MAJOR=3 -DBUTTON_VER_MINOR=2 -DBUTTON_VER_PATCH=0 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj -c /Users/dome/esp/speech_test/micro_speech/main/command_responder.cc
/Users/dome/esp/speech_test/micro_speech/main/command_responder.cc: In function 'void update_display_task(void*)':
/Users/dome/esp/speech_test/micro_speech/main/command_responder.cc:71:3: error: 'CommandInfo' was not declared in this scope
   71 |   CommandInfo *command_info = static_cast<CommandInfo *>(pvParameters);
      |   ^~~~~~~~~~~
/Users/dome/esp/speech_test/micro_speech/main/command_responder.cc:71:16: error: 'command_info' was not declared in this scope
   71 |   CommandInfo *command_info = static_cast<CommandInfo *>(pvParameters);
      |                ^~~~~~~~~~~~
/Users/dome/esp/speech_test/micro_speech/main/command_responder.cc:71:43: error: 'CommandInfo' does not name a type
   71 |   CommandInfo *command_info = static_cast<CommandInfo *>(pvParameters);
      |                                           ^~~~~~~~~~~
/Users/dome/esp/speech_test/micro_speech/main/command_responder.cc:71:55: error: expected '>' before '*' token
   71 |   CommandInfo *command_info = static_cast<CommandInfo *>(pvParameters);
      |                                                       ^
/Users/dome/esp/speech_test/micro_speech/main/command_responder.cc:71:55: error: expected '(' before '*' token
   71 |   CommandInfo *command_info = static_cast<CommandInfo *>(pvParameters);
      |                                                       ^
      |                                                       (
/Users/dome/esp/speech_test/micro_speech/main/command_responder.cc:71:56: error: expected primary-expression before '>' token
   71 |   CommandInfo *command_info = static_cast<CommandInfo *>(pvParameters);
      |                                                        ^
/Users/dome/esp/speech_test/micro_speech/main/command_responder.cc:71:71: error: expected ')' before ';' token
   71 |   CommandInfo *command_info = static_cast<CommandInfo *>(pvParameters);
      |                                                                       ^
      |                                                                       )
ninja: build stopped: subcommand failed.
